syntax = "proto3";

package ru.otus.grpc;
option java_package = "ru.otus.grpc.generated";
option java_multiple_files = true;

message NumGenerateRequest {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message GeneratedNumResponse {
    int32 value = 1;
}

service NumGenerateService {
    rpc generate(NumGenerateRequest) returns (stream GeneratedNumResponse);
}
